--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -25,6 +25,10 @@
             .media-title {
                 font-size: 1rem;
             }
+            .no-media-title {
+                font-size: 1.1rem;
+                margin-left: 0.5rem;
+            }
             .media-artist {
                 font-size: 0.8rem;
                 color: rgba(white, 0.4);
