Corrected the transitions

--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -10,6 +10,7 @@
 
 .bar-window {
     .player-container {
+        min-height: 4.1rem;
         .bar-player {
             background-color: rgba(#000000, 0.1);
             border: 2px solid rgba(#ffffff, 0.2);
