--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -46,3 +46,44 @@
     margin-bottom: -2rem;
     margin-right: -1.5rem;
 }
+
+.info-box {
+    margin-left: 1rem;
+    min-height: 4.1rem;
+    background-color: rgba(#000000, 0.1);
+    border: 2px solid rgba(#ffffff, 0.2);
+    border-radius: 1rem;
+    min-width: 26rem;
+    min-height: 2.8rem;
+    padding: 0.5rem 0.5rem;
+    color: white;
+}
+
+.os-logo {
+    // color: white;
+    // border: 2px solid rgba(#ffffff, 0.2);
+    margin-right: 0.5rem;
+}
+
+.os-name {
+}
+.os-kernel {
+    color: rgba(white, 0.4);
+}
+// .usage-slider {
+//     all: unset;
+//
+//     * {
+//         all: unset;
+//     }
+// }
+.usage-slider trough {
+    min-height: 0.7rem;
+    min-width: 5rem;
+    border-radius: 1rem;
+}
+.usage-slider trough,
+.usage-slider trough highlight {
+    min-height: 0.7rem;
+    background-color: red;
+}
