feat(tray): add tray widget

--- a/main.scss
+++ b/main.scss
@@ -3,6 +3,8 @@
 @import "styles/bar.scss";
 @import "styles/workspaces.scss";
 @import "styles/notification.scss";
+@import "styles/tray.scss";
+
 * {
     all: unset;
     background: unset;
