--- a/styles/notification.scss
+++ b/styles/notification.scss
@@ -18,6 +18,6 @@
         background-color: rgba(white, 0.2);
     }
 }
-.notification-icon {
-    border-radius: 50%;
+.notification-body {
+    opacity: 0.6;
 }
