feat(datetime): add datetime to bar

--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,8 @@
 @import "styles/mixins/window.scss";
 @import "styles/mixins/hover.scss";
+@import "styles/mixins/bar-border.scss";
 @import "styles/bar.scss";
+
 @import "styles/workspaces.scss";
 @import "styles/notification.scss";
 @import "styles/tray.scss";
