--- a/styles/tray.scss
+++ b/styles/tray.scss
@@ -1,8 +1,8 @@
 .containers {
-    background: rgba(black, 0.1);
-    border-radius: 20px;
+    //     background: rgba(black, 0.1);
+    //     border-radius: 20px;
     margin-right: 10px;
-    margin-top: 3px;
-    padding: 0.4rem;
-    border: 1px solid rgba(255, 255, 255, 0.9);
+    //     margin-top: 3px;
+    //     padding: 0.4rem;
+    //     border: 1px solid rgba(255, 255, 255, 0.9);
 }
