--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -102,3 +102,51 @@
         font-weight: bold;
     }
 }
+.tray {
+    margin-right: 1rem;
+}
+$bg: #1a1112;
+$bg-light: #261d1e;
+$fg: #f0dedf;
+$active: #ffb2bc;
+$unactive: #d7c1c3;
+popover.menu {
+    contents {
+        background-color: $bg;
+        padding: 0.35rem;
+        border-radius: 1rem;
+        modelbutton {
+            transition: 0.3s;
+            border-radius: 0.5rem;
+            padding: 0.25rem 1rem;
+        }
+        modelbutton:hover {
+            background-color: mix($bg, $unactive, 80%);
+        }
+        separator {
+            background-color: mix($bg, $unactive, 90%);
+            min-height: 0.1rem;
+            margin: 0.5rem 0;
+        }
+
+        label:disabled {
+            color: $unactive;
+        }
+
+        arrow {
+            opacity: 0.3;
+
+            &:hover {
+                background: none;
+            }
+
+            &.left {
+                -gtk-icon-source: -gtk-icontheme("go-previous-symbolic");
+            }
+
+            &.right {
+                -gtk-icon-source: -gtk-icontheme("go-next-symbolic");
+            }
+        }
+    }
+}
