--- a/styles/mixins/hover.scss
+++ b/styles/mixins/hover.scss
@@ -2,6 +2,10 @@
     background-color: $bg;
 
     &:hover {
-        background-color: lighten($bg, 5%);
+        @if $darkmode == true {
+            background-color: lighten($bg, 5%);
+        } @else {
+            background-color: darken($bg, 5%);
+        }
     }
 }
