--- a/styles/mixins/window.scss
+++ b/styles/mixins/window.scss
@@ -1,8 +1,8 @@
 @mixin window {
-    background-color: rgba(black, 0.5);
+    background-color: $surface;
     border-radius: 1rem;
-    padding: 0.5rem;
-    color: white;
-    box-shadow: 0 0 4px 2px rgba(black, 0.5);
+    padding: 1rem;
+    color: $onSurface;
+    box-shadow: 0 0 4px 2px $shadow;
     margin: 1rem;
 }
