--- a/styles/mixins/window.scss
+++ b/styles/mixins/window.scss
@@ -1,8 +1,7 @@
 @mixin window {
-    background-color: $surface;
+    background-color: rgba($surface, 0.5);
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 0.5rem;
     color: $onSurface;
-    box-shadow: 0 0 4px 2px $shadow;
     margin: 1rem;
 }
