--- a/styles/workspaces.scss
+++ b/styles/workspaces.scss
@@ -7,7 +7,8 @@
 }
 .workspace {
     @include hover($secondary_paletteKeyColor);
-    background-color: rgba($primaryContainer, 0.3);
+    background-color: rgba($surface, 0.3);
+
     border-radius: 1rem;
     margin: 0 0.25rem;
     margin-top: 0.2rem;
