--- a/styles/notification_centre.scss
+++ b/styles/notification_centre.scss
@@ -1,5 +1,5 @@
 .notification-center {
-    background-color: $surfaceContainerLow;
+    background-color: rgba($surfaceContainerLow, 0.3);
     border-radius: 1.5rem 1.5rem 1rem 1rem;
     padding: 1rem;
 }
@@ -9,7 +9,7 @@
 }
 
 .notification {
-    background-color: $surfaceContainerHigh;
+    background-color: rgba($surfaceContainerHigh, 0.5);
     border-radius: 1rem;
     padding: 1rem;
     margin-top: 1rem;
@@ -18,7 +18,6 @@
 .notification-count {
     background-color: $tertiary;
     font-size: 1rem;
-    font-family: "SF Pro Rounded";
     color: $onTertiary;
     min-width: 2rem;
     min-height: 2rem;
