--- a/styles/workspaces.scss
+++ b/styles/workspaces.scss
@@ -3,11 +3,11 @@
 }
 
 .ws-container {
-    @include border(#ffffff);
+    @include border();
+    background-color: rgb(darken($surface, 0.1), 0.3);
 }
 .workspace {
     @include hover($secondary_paletteKeyColor);
-    background-color: rgba($surface, 0.3);
 
     border-radius: 1rem;
     margin: 0 0.25rem;
