--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -3,12 +3,12 @@
     background: unset;
 }
 .media-controls {
-    margin-left: -1.9rem;
+    margin-left: 2px;
 }
 
-.media-title {
-    margin-top: -2px;
-}
+// .media-title {
+//     margin-top: -2px;
+// }
 .bar-window {
     background-color: rgba($surface, 0.7);
     min-height: 2.2rem;
