fix(styling): massive styling overhaul

--- a/styles/osd.scss
+++ b/styles/osd.scss
@@ -1,5 +1,8 @@
 .osd-window {
-    background: transparent;
+    * {
+        background: unset;
+    }
+    background: unset;
 }
 
 .osd-dismiss {
@@ -8,7 +11,7 @@
 }
 
 .osd-box {
-    background: $surface;
+    background: rgba($surface, 0.5);
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     padding: 10px;
@@ -21,7 +24,7 @@
 
 .osd-corner-up,
 .osd-corner-down {
-    color: $surface;
+    color: rgba($surface, 0.5);
 }
 .osd-corner-up {
     margin-left: 28px;
@@ -52,7 +55,6 @@
     min-height: 200px;
     padding: 4px;
     border-radius: 25px;
-    background: darken($primary, 10%);
 }
 
 .osd-scale {
@@ -82,30 +84,4 @@
 
 .osd-percentage {
     margin-top: 0.5rem;
-}
-
-/* Volume specific styling */
-.osd-content.vol .osd-icon {
-    background: rgba(79, 70, 229, 0.2);
-    color: #a5b4fc;
-}
-
-.osd-content.vol .osd-scale highlight {
-    background: linear-gradient(0deg, #4f46e5, #6366f1);
-}
-
-/* Brightness specific styling */
-.osd-content.bl .osd-icon {
-    background: rgba(245, 158, 11, 0.2);
-    color: #fcd34d;
-}
-
-.osd-content.bl .osd-scale highlight {
-    background: linear-gradient(0deg, #f59e0b, #f97316);
-}
-
-.osd-slider {
-    min-height: 0.7rem;
-    background-color: rgba(white, 0.2);
-    color: white;
 }
