--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -1,16 +1,25 @@
-* {
-    all: unset;
-    background: unset;
-}
+// * {
+//     all: unset;
+//     background: unset;
+// }
 .media-controls {
+    all: unset;
     margin-left: 2px;
+    opacity: 0.6;
+    &:hover {
+        opacity: 1;
+    }
+}
+.media-icon-s {
+    color: $onSurface;
 }
 
 // .media-title {
 //     margin-top: -2px;
 // }
 .bar-window {
-    background-color: rgba($surface, 0.7);
+    all: unset;
+    background-color: rgba($surface, 0.5);
     min-height: 2.2rem;
     color: $onSurface;
 }
@@ -73,12 +82,6 @@
     @include border();
     background-color: rgb(darken($surface, 0.1), 0.3);
 }
-.media-controls {
-    opacity: 0.6;
-    &:hover {
-        opacity: 1;
-    }
-}
 .datetime {
     @include border();
     background-color: rgb(darken($surface, 0.1), 0.3);
@@ -90,11 +93,15 @@
     margin-right: 1rem;
 }
 popover.menu {
+    * {
+        all: unset;
+    }
     margin-top: -0.8rem;
     contents {
         background-color: rgba($surface, 0.5);
         padding: 0.35rem;
         border-radius: 1rem;
+        color: $onSurface;
         modelbutton {
             transition: 0.3s;
             border-radius: 0.5rem;
@@ -110,7 +117,7 @@ popover.menu {
         }
 
         label:disabled {
-            color: $outline;
+            color: lighten($onSurface, 30%);
         }
 
         arrow {
