refactor(osd): styling and use icons instead of text

--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -175,7 +175,7 @@ popover.menu {
     @if $darkmode == true {
         color: $onSurface;
     } @else {
-        color: $surfaceContainerLow;
+        color: $inverseOnSurface;
     }
     font-family: "JetBrainsMono Nerd Font", monospace;
     font-size: 0.8rem;
