--- a/styles/notification_centre.scss
+++ b/styles/notification_centre.scss
@@ -1,5 +1,5 @@
 .notification-center {
-    background-color: rgba($surfaceContainerLow, 0.3);
+    background-color: rgba($surfaceContainerLow, $opacity-low);
     border-radius: 1.5rem 1.5rem 1rem 1rem;
     padding: 1rem;
 }
@@ -9,7 +9,7 @@
 }
 
 .notification {
-    background-color: rgba($surfaceContainerHigh, 0.5);
+    background-color: rgba($surfaceContainerHigh, $opacity-medium);
     border-radius: 1rem;
     padding: 1rem;
     margin-top: 1rem;
