--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -52,9 +52,9 @@
     background-color: darken($surfaceContainer, 10%);
     &:active {
         @if $darkmode == true {
-            background-color: rgba(255, 255, 255, 0.05);
+            background-color: rgba(255, 255, 255, $opacity-low);
         } @else {
-            background-color: rgba(0, 0, 0, 0.05);
+            background-color: rgba(0, 0, 0, $opacity-low);
         }
     }
 }
